# axiom

./: .dockerignore  .gitignore  .jet.loop-prompt.md  .jet.state  .mamba.state  .mcp.json.example  @mamba_test  @mamba_test-diff  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.md  GOAL.md  QUICKSTART.md  README.md  TESTING.md  ai-studio-snapshot-after-env-deep.md  ai-studio-snapshot-after-env.md  aw.toml  cc  install.sh  jet-lock.yaml  jet.test.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
crates/cclab-aurora/: Cargo.toml  README.md
crates/cclab-aurora/src/: lib.rs
crates/cclab-cli-registry/: Cargo.toml  README.md
crates/cclab-cli-registry/src/: lib.rs
crates/cclab-core/: Cargo.toml  README.md
crates/cclab-core/src/: error.rs  error_utils.rs  http.rs  lib.rs  utils.rs
crates/cclab-ctx-inf-db/: BENCHMARKS.md  Cargo.toml  README.md
crates/cclab-ctx-inf-db/benches/: ingest_throughput.rs
crates/cclab-ctx-inf-db/src/: engine.rs  error.rs  graph.rs  lib.rs  temporal.rs  types.rs
crates/cclab-ctx-inf-db/tests/: apply_op_replay_invariants_test.rs  bitemporal_test.rs  crash_recovery_test.rs  engine_test.rs  graph_test.rs  persistence_stats_test.rs  persistence_stress_test.rs  persistence_test.rs  snapshot_gc_test.rs  torn_page_test.rs  wal_rotation_test.rs
crates/cclab-frame/: Cargo.toml  README.md
crates/cclab-frame/src/: lib.rs
crates/cclab-frame/tests/: frame.rs
crates/cclab-grid/: Cargo.toml  README.md
crates/cclab-grid-render-webgpu/: Cargo.toml  README.md
crates/cclab-grid-render-webgpu/docs/: adapter-feature-negotiation-slice-4q.md  backend-selection-slice-4l.md  canvas-alpha-mode-slice-4aa.md  cell-rect-pipeline-slice-4b.md  clear-color-config-slice-4o.md  dpr-scaling-slice-4g.md  font-db-load-and-index-slice-5b.md  glyph-atlas-sampler-descriptor-slice-5i.md  glyph-atlas-texture-descriptor-slice-5e.md  glyph-atlas-upload-slice-5f.md  glyph-cache-insert-with-bitmap-slice-5d.md  gpu-memory-accounting-slice-4bb.md  gpu-timeline-queries-slice-4i.md  headless-adapter-integration-test-slice-4t.md  instance-buffer-pool-slice-4d.md  instance-staging-path-slice-4r.md  lifecycle-docs-slice-4dd.md  lost-context-recovery-slice-4h.md  msaa-toggle-slice-4p.md  per-surface-pipeline-cache-slice-4u.md  present-mode-selection-slice-4z.md  raf-frame-loop-slice-4f.md  rasterize-glyph-bitmap-slice-5c.md  render-pass-orchestration-slice-4e.md  renderer-error-thiserror-integration-slice-4w.md  scroll-driven-uniform-update-slice-4s.md  shape-run-slice-5j.md  submit-batching-slice-4j.md  surface-acquire-recovery-slice-4n.md  take-screenshot-readback-pixels-slice-4y.md  text-pass-bind-group-layout-slice-5h.md  text-pass-wgsl-slice-5g.md  tracing-instrumentation-per-pass-spans-slice-4x.md  ttf-parser-font-face-wrapper-slice-5a.md  viewport-clamping-helper-integration-slice-4v.md  viewport-uniform-buffer-slice-4c.md  wgpu-validation-dev-slice-4k.md
crates/cclab-grid-render-webgpu/examples/: minimal.rs
crates/cclab-grid-render-webgpu/src/: backend.rs  cell_rect.rs  dpr.rs  font_db.rs  font_face.rs  frame.rs  frame_timing.rs  glyph_atlas.rs  glyph_atlas_upload.rs  glyph_cache.rs  glyph_raster.rs  gpu_memory.rs  headless.rs  instance_pool.rs  lib.rs  lost_context.rs  shaper.rs  text_pass.rs  tracing_setup.rs  validation.rs  viewport.rs  viewport_clamp.rs
crates/cclab-grid-render-webgpu/tests/: headless_smoke.rs
crates/cclab-grid-wasm/: Cargo.toml  README.md
crates/cclab-grid-wasm/docs/: canvas-resize-observer-slice-4cc.md  renderer-bridge-slice-4m.md
crates/cclab-grid-wasm/src/: api.rs  frame_loop.rs  lib.rs  renderer_bridge.rs  resize_debouncer.rs  viewport.rs
crates/cclab-grid/src/: lib.rs
crates/cclab-learn/: Cargo.toml  README.md
crates/cclab-learn/src/: lib.rs
crates/cclab-log/: Cargo.toml  README.md
crates/cclab-log-mamba/: Cargo.toml  README.md
crates/cclab-log-mamba/src/: lib.rs  methods.rs  types.rs
crates/cclab-log-mamba/tests/: methods_test.rs
crates/cclab-log/src/: error.rs  lib.rs  logger.rs  sink.rs
crates/cclab-mamba-registry/: Cargo.toml  README.md
crates/cclab-mamba-registry/src/: convert.rs  exc.rs  http.rs  lib.rs  ops.rs  rc.rs  runtime.rs  test_ops.rs
crates/cclab-mamba-registry/tests/: registry_test.rs
crates/cclab-mcp-mamba/: Cargo.toml  README.md
crates/cclab-mcp-mamba/src/: lib.rs  methods.rs  types.rs
crates/cclab-mcp-mamba/tests/: methods_test.rs
crates/cclab-qc-mamba/: Cargo.toml  README.md
crates/cclab-qc-mamba/src/: lib.rs  methods.rs
crates/cclab-runtime-mamba/: Cargo.toml  README.md
crates/cclab-runtime-mamba/src/: lib.rs  methods.rs  types.rs
crates/cclab-runtime-mamba/tests/: methods_test.rs
crates/cclab-schema/: Cargo.toml  README.md
crates/cclab-schema-mamba/: Cargo.toml  README.md
crates/cclab-schema-mamba/src/: lib.rs  methods.rs  types.rs
crates/cclab-schema-mamba/tests/: test_binding.rs
crates/cclab-schema/examples/: basic_validation.rs  custom_validators.rs  discriminated_unions.rs  error_handling.rs  python_usage.py
crates/cclab-schema/src/: coercion.rs  computed.rs  config.rs  constraints.rs  custom_validators.rs  dataclass.rs  discriminated.rs  errors.rs  formats.rs  generics.rs  json_schema.rs  lib.rs  protobuf.rs  serializers.rs  settings.rs  settings_source.rs  strict.rs  types.rs  validators.rs
crates/cclab-schema/tests/: error_paths_tests.rs  field_validator_tests.rs  model_validator_tests.rs  serializer_tests.rs  validation_tests.rs
crates/cclab-server/: Cargo.toml  README.md
crates/cclab-server/src/: cli.rs  dashboard.html  http_server.rs  lens_pool.rs  lib.rs  registry.rs
crates/cclab-server/tests/: unified_server.rs
crates/cclab-text/: Cargo.toml  README.md
crates/cclab-text/src/: lib.rs
crates/cclab-tqdm/: Cargo.toml  README.md
crates/cclab-util/: Cargo.toml  README.md
crates/cclab-wal/: Cargo.toml  README.md
libs/claimtoken/: Cargo.toml
libs/cli-std/: Cargo.toml
libs/cli-std/src/: lib.rs  (+4 more)
libs/h2c/: Cargo.toml
libs/openapi-codegen/: Cargo.toml
libs/operator/: Cargo.toml
libs/raft-host/: Cargo.toml
(+65246 files in other folders)
