[package]
name = "cclab-aurora"
version = "0.1.0"
edition = "2021"
description = "Diagram and specification generation library"
license = "MIT"
authors = ["Chris Cheng <chris.cheng.c4@gmail.com>"]
repository = "https://github.com/chrischeng-c4/cclab"
keywords = ["mermaid", "diagram", "openapi", "asyncapi", "codegen"]
categories = ["development-tools", "visualization"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
