[package]
name = "cclab-cli-registry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI module registration trait and distributed slice for cclab"

[lib]
name = "cclab_cli_registry"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
linkme.workspace = true
