[package]
name = "cclab-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true

# Optional dependencies for error conversions
mongodb = { workspace = true, optional = true }
bson = { workspace = true, optional = true }
sqlx = { version = "0.8", features = ["postgres"], optional = true }

[features]
default = []
mongodb-errors = ["mongodb", "bson"]
postgres-errors = ["sqlx"]
