[package]
name = "cclab-ctx-inf-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Context Inference Database — temporal knowledge graph with GPU-accelerated inference"

[dependencies]
# Core
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
rayon = { workspace = true }

# Collections
dashmap = { workspace = true }

# Persistence
cclab-wal = { path = "../cclab-wal" }
crossbeam-channel = "0.5"
crc32fast = "1.4"
sha2 = "0.10"
tracing = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"
# POSIX bindings (fork/kill/waitpid/pipe) for subprocess-based crash-recovery tests.
# See tests/crash_recovery_test.rs — unix-only, guarded by #[cfg(unix)].
# nix 0.27 has default-features = [], so we must opt into the POSIX modules we use.
nix = { version = "0.27", features = ["process", "signal", "fs"] }

[[bench]]
name = "ingest_throughput"
harness = false
