[package]
name = "cclab-frame"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DataFrame and Series (Pandas-like)"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
arraykit = { path = "../../projects/mamba/mambalibs/arraykit" }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[features]
default = []
io-extra = ["dep:serde_json"]
serde = ["dep:serde"]
parallel = ["dep:rayon"]
