[package]
name = "cclab-grid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Spreadsheet engine: core data structures, formula evaluation, history, persistence, and collaboration server"

[features]
default = ["db", "server"]
db = ["dep:cclab-wal", "dep:bincode", "dep:parking_lot", "dep:tokio"]
server = ["db", "dep:axum", "dep:tower", "dep:tower-http", "dep:yrs", "dep:uuid", "dep:chrono", "dep:tracing-subscriber", "dep:dotenvy", "dep:anyhow", "dep:futures"]

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bitvec = "1.0"
regex = "1.10"

# Formula dependencies
nom = "7.1"

# Shared dependencies
tokio = { version = "1.40", features = ["full"], optional = true }
tracing = "0.1"

# DB dependencies (feature-gated)
cclab-wal = { path = "../cclab-wal", optional = true }
bincode = { version = "1.3", optional = true }
parking_lot = { version = "0.12", optional = true }

# Server dependencies (feature-gated)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
yrs = { version = "0.21", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
dotenvy = { version = "0.15", optional = true }
anyhow = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "cclab-grid-server"
path = "src/bin/cclab-grid-server.rs"
required-features = ["server"]
