[package]
name = "cclab-learn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Machine learning and deep learning (scikit-learn-like)"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
arraykit = { path = "../../projects/mamba/mambalibs/arraykit" }

[dev-dependencies]
tempfile = "3"

[features]
default = ["ml"]
full = ["ml", "dl"]
ml = []
dl = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]
