[package]
name = "cclab-log-mamba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mamba native bindings for cclab-log — structured logging"

[lib]
name = "cclab_log_mamba"
crate-type = ["rlib"]

[dependencies]
cclab-mamba-registry = { path = "../cclab-mamba-registry" }
cclab-log = { path = "../cclab-log" }
linkme.workspace = true
tokio.workspace = true
once_cell.workspace = true
