[package]
name = "cclab-mcp-mamba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mamba native bindings for MCP — Model Context Protocol server"

[lib]
name = "cclab_mcp_mamba"
crate-type = ["rlib"]

[dependencies]
cclab-mamba-registry = { path = "../cclab-mamba-registry" }
linkme.workspace = true
tokio.workspace = true
once_cell.workspace = true
serde_json.workspace = true
