[package]
name = "cclab-qc-mamba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mamba native bindings for cclab-qc — test fixtures, marks, and assertions"

[lib]
name = "cclab_qc_mamba"
crate-type = ["rlib"]

[dependencies]
cclab-mamba-registry = { path = "../cclab-mamba-registry" }
qc = { package = "meter", path = "../../projects/meter" }
linkme.workspace = true
