[package]
name = "cclab-runtime-mamba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mamba native bindings for cclab async runtime — serve, spawn, sleep, gather"

[lib]
name = "cclab_runtime_mamba"
crate-type = ["rlib"]

[dependencies]
cclab-mamba-registry = { path = "../cclab-mamba-registry" }
linkme.workspace = true
tokio.workspace = true
axum.workspace = true
thiserror.workspace = true
once_cell.workspace = true
