[package]
name = "cclab-schema-mamba"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mamba binding for cclab-schema — blueprint crate for {crate}-mamba native module bindings"

[lib]
name = "cclab_schema_mamba"
crate-type = ["rlib"]

[dependencies]
# Mamba native-module registry: MambaModule trait, MAMBA_MODULES slice, MbValue
cclab-mamba-registry = { path = "../cclab-mamba-registry" }

# Schema validation (the Rust library we are wrapping)
cclab-schema = { path = "../cclab-schema" }

# Linkme distributed slice for auto-registration
linkme.workspace = true

# Serialization for JSON-Schema output
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
# Nothing extra — tests use the crate itself
