[package]
name = "cclab-text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text processing: segmentation, search ranking, HTML/XML parsing"

[lib]
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["segment", "rank", "markup", "template"]
template = ["dep:serde_json"]
segment = []
rank = []
markup = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]
