[package]
name = "cclab-tqdm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Progress tracking with tqdm-compatible API, GIL-free rendering"

[lib]
name = "cclab_tqdm"
crate-type = ["rlib"]

[dependencies]
# Core
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

# Progress bar
indicatif.workspace = true

