[package]
name = "cclab-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Humanize formatting, iteration utilities, and caching for cclab"

[lib]
name = "cclab_util"
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Optional: Python bindings

[dev-dependencies]
