[package]
name = "cclab-wal"
version = "0.1.0"
edition = "2021"
description = "Shared Write-Ahead Log implementation for cclab storage engines"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
crc32fast = "1.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
