[package]
name = "cclab-cli-std"
version = "0.1.0"
edition = "2021"
description = "Standard agent-facing CLI commands every axiom tool ships: llm (offline self-docs), upgrade (self-update from GitHub releases), report-issue (file a diagnostics-rich issue). Parameterized by ToolInfo; clap-agnostic."

[lib]
name = "cclab_cli_std"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
# Pure decode/verify (no openssl); always available so the offline paths build.
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
# HTTPS to GitHub — gated so the offline paths (llm, report-issue fallback,
# upgrade --check messaging) build without an HTTP client.
reqwest = { workspace = true, optional = true }

[features]
default = []
# Enables the network paths: upgrade install/download and report-issue submit.
online = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
