[package]
name = "cli-std"
version = "0.1.0"
edition = "2021"
description = "Standard agent-facing CLI commands every axiom tool ships: llm (offline self-docs), upgrade (self-update from GitHub releases), issue (search/view/create diagnostics-rich issues). Parameterized by ToolInfo; clap-agnostic."

[lib]
name = "cli_std"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
# Pure decode/verify (no openssl); always available so the offline paths build.
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
# HTTPS to GitHub — gated so the offline paths (llm, issue create fallback,
# upgrade --check messaging) build without an HTTP client.
reqwest = { workspace = true, optional = true }

[features]
default = []
# Enables the network paths: upgrade install/download and issue search/view/create.
online = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
