[package]
name = "cclab-openapi-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generate typed TypeScript, Python, and Rust API clients from an OpenAPI 3.0/3.1 document"

[lib]
name = "cclab_openapi_codegen"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
