[package]
name = "raft-host"
version = "0.1.0"
edition = "2021"
description = "Shared raft host: drives libs/raft-core for a RaftStateMachine over an h2c peer transport, with snapshot/compaction and read-your-write propose. The ecosystem's one raft driver — lumen/keep/relay/loom each supply a state machine."

[lib]
name = "raft_host"
path = "src/lib.rs"

[dependencies]
raft-core = { path = "../raft-core" }
h2c = { path = "../h2c" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
